Fixed spacing on front page quote

--- a/themes/evr/sass/_front-page.scss
+++ b/themes/evr/sass/_front-page.scss
@@ -163,7 +163,8 @@
             align-items: center;
             flex-wrap: wrap;
             p {
-                margin: 0;
+                margin: 0 auto;
+                max-width: 1080px;
                 .open-quote, .close-quote {
                     display: inline-block;
                     margin-right: 8px;
@@ -179,9 +180,8 @@
                 }
             }
             .author {
-                margin: 0;
                 width: 100%;
-                padding-top: 0.5rem;
+                padding: 0.5rem;
             }
             @include desktop {
                 font-size: 2.2rem;
